--- a/DevCaed-MVC/Views/Shared/_Layout.cshtml
+++ b/DevCaed-MVC/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="~/css/bootstrap/bootstrap-rtl.css">
     <link rel="stylesheet" href="~/css/customcss/style.css">
     <link rel="stylesheet" href="~/css/fontawesome/css/all.css">
+    @RenderSection("rel",required:false)
 </head>
 <body>
     <header class="bg-white">
@@ -17,7 +18,7 @@
             <div class="row pb-3">
 
                 <div class="d-none d-lg-block col-lg-2">
-                    <img src="images/logo.jpg" alt="EasyLearn" title="EasyLearn" class="img-fluid">
+                    <a href="@Url.Action("index","Home")"><img src="~/images/logo.jpg" alt="EasyLearn" title="EasyLearn" class="img-fluid"></a>
                 </div>
 
                 <div class="d-none d-lg-flex col-lg-6 align-items-center search-box">
@@ -37,7 +38,7 @@
                         <div class="dropdown-menu dropdown-cart mt-3">
                             <ul class="list-unstyled">
                                 <li>
-                                    <img src="images/bootstrap.jpg" class="m-1 ml-3">
+                                    <img src="~/images/bootstrap.jpg" class="m-1 ml-3">
                                     <div class="float-right">
                                         <small class=" mt-3 mr-2 d-block">آموزش جامع Bootstrap 4 (64.000 تومان)</small>
                                     </div>
@@ -58,7 +59,7 @@
                         </div>
                     </a>
                     <a href="sign-up.html" class="btn btn-outline-info font-13 vazir-med-fa"><i class="fa fa-user-plus pl-1"></i>ثبت نام</a>
-                    <a href="login.html" class="btn btn-info font-13 vazir-med-fa mx-2">ورود</a>
+                    <a asp-controller="Home" asp-action="login" class="btn btn-info font-13 vazir-med-fa mx-2">ورود</a>
                     <a href="teach.html" class="btn btn-primary font-13 vazir-med-fa">مدرس شوید</a>
                 </div>
 
@@ -119,9 +120,7 @@
     </header>
     <!----- End header ----->
     <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+        @RenderBody()
     </div>
 
     <footer class="bg-white">
